traces/bug_246.txt
examples++-load/iohdf5.cpp:336: error: DEAD_STORE
  The value written to &trans (type int) is never used.
Showing all 1 steps of the trace


examples++-load/iohdf5.cpp:336:4: Write of unused value
334.   	{
335.   	  //Hyp A
336.   	  int trans=-1;
          ^
337.   	  if(l[ii].nbfloat==2)
338.   	    {
